[package]
name = "pingora-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
env_logger = "0.11.5"
http = "1.1.0"
itertools = "0.13.0"
lazy_mut = "0.1.0"
log = "0.4.22"
once_cell = "1.19.0"
pingora = { version = "0.3.0", features = ["lb", "proxy"] }
pingora-core = "0.3.0"
pingora-error = "0.3.0"
pingora-load-balancing = "0.3.0"
pingora-proxy = "0.3.0"
redis = "0.25.4"
serde_json = "1.0.120"
